# vehicle-intelligence-platform

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml  example_65ch.yaml  nominal.yaml  production_can.yaml  sedan_52ch.yaml  stress_test.yaml  xcp_test_bench.yaml
docs/: 01_architecture.md  02_implementation_plan.md  03_design_decisions.md  04_product_strategy.md  06_cycle_and_lifetime_health_plan.md  07_metrics_reference.md
examples/: quickstart.py
src/: __init__.py  cli.py
src/config/: catalog.py  models.py
src/dashboard/: app.py
src/edge/: cycle.py  lifetime.py  runtime.py
src/features/: engine.py
src/inference/: dtc.py  pipeline.py
src/ingestion/: normalizer.py  reader.py
src/models/: anomaly.py  evaluation.py
src/schemas/: telemetry.py
src/simulation/: generator.py
src/storage/: writer.py
src/transport/: alert_sinks.py  mock_can.py
src/utils/: logging.py
tests/: test_alert_sinks.py  test_cli.py  test_cycle.py  test_edge.py  test_edge_cases.py  test_evaluation.py  test_fault_classifier.py  test_features.py  test_hardening.py  test_lifetime.py  test_logging.py  test_models.py  test_multi_rate.py  test_normalizer.py  test_pipeline.py  test_quality_gate.py  test_reader.py  test_schemas.py  test_simulation.py  test_storage.py  test_topology.py  test_transport.py
